fixed bacground image overflow

--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,6 +1,8 @@
 body {
   background-image: url("../../images/background.jpg");
   background-repeat: none;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .login {
