--- a/src/components/register/register.css
+++ b/src/components/register/register.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("../../images/background.jpg");
   background-repeat: none;
+  overflow: hidden;
 }
 
 .register-container {
